incorporating mongodb running on localhost

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,19 @@
 spring.mvc.view.suffix=.html
 
 # MONGODB (MongoProperties)
-#spring.data.mongodb.host= localhost # the db host
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.uri=mongodb://localhost/test
-#spring.data.mongodb.database=
-#spring.data.mongodb.authentication-database=
-#spring.data.mongodb.grid-fs-database=
-#spring.data.mongodb.username=mondodb
-#spring.data.mongodb.password=test123
-### spring.data.mongodb.repositories.enabled= ##true # if spring data repository support is enabled
+##
+##  Docker mongo latest
+##  docker run --name automateditsolutions-mongo   -e MONGODB_USERNAME=mongodb -e MONGODB_PASSWORD=temp123   -e MONGODB_DATABASE=aits_dev mongo:latest
+##
+## https://spring.io/guides/gs/accessing-data-mongodb/
+## https://stackoverflow.com/questions/32538123/spring-boot-and-mongodb-configuration
+##
+spring.data.mongodb.host= localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb://localhost/test
+spring.data.mongodb.database=test
+spring.data.mongodb.authentication-database=
+spring.data.mongodb.grid-fs-database=
+spring.data.mongodb.username=mondodb
+spring.data.mongodb.password=test123
+###spring.data.mongodb.repositories.enabled= ##true # if spring data repository support is enabled
