--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,12 +8,12 @@ spring.mvc.view.suffix=.html
 ## https://spring.io/guides/gs/accessing-data-mongodb/
 ## https://stackoverflow.com/questions/32538123/spring-boot-and-mongodb-configuration
 ##
-spring.data.mongodb.host= localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.uri=mongodb://localhost/test
-spring.data.mongodb.database=test
-spring.data.mongodb.authentication-database=
-spring.data.mongodb.grid-fs-database=
-spring.data.mongodb.username=mondodb
-spring.data.mongodb.password=test123
+##spring.data.mongodb.host= localhost
+##spring.data.mongodb.port=27017
+##spring.data.mongodb.uri=mongodb://localhost/test
+##spring.data.mongodb.database=test
+##spring.data.mongodb.authentication-database=
+##spring.data.mongodb.grid-fs-database=
+##spring.data.mongodb.username=mondodb
+##spring.data.mongodb.password=test123
 ###spring.data.mongodb.repositories.enabled= ##true # if spring data repository support is enabled
